--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
   "name": "button-board",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "description": "The button-board app development environment",
   "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev-web": "npm run --prefix web dev",
+    "dev-server": "nodemon server/",
+    "build-web": "npm run --prefix web build",
+    "preview-web": "npm run --prefix web preview",
+    "package": "echo Not implemented"
   },
-  "dependencies": {
-    "@react-hook/resize-observer": "^1.2.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-grid-layout": "^1.4.3"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^5.0.0"
+    "nodemon": "^3.0.2"
   }
 }
