--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,16 @@
   "name": "button-board-server",
   "version": "0.0.0",
   "description": "The backend for the button-board app",
-  "main": "index.js",
+  "type": "module",
+  "exports": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "lowdb": "^7.0.1",
+    "socket.io": "^4.7.2"
+  }
 }
