--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@react-hook/resize-observer": "^1.2.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
