Fix launch scripts. build not tested

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The button-board app development environment",
   "scripts": {
     "dev-web": "npm run --prefix web dev",
-    "dev-server": "nodemon server/",
+    "dev-server": "npm run --prefix server dev",
     "build-web": "npm run --prefix web build",
     "preview-web": "npm run --prefix web preview",
     "package": "echo Not implemented"
