--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.2.9",
     "@react-hook/resize-observer": "^1.2.6",
     "@uidotdev/usehooks": "^2.4.1",
